# ttvpack

./: .gitignore  BLS Testing.ipynb  Demo 2.ipynb  Demo.ipynb  README.md  TimingModel-dev.ipynb  fitting.py  maxsector.py  optimisation.py  requirements.txt  retrieval-dev.ipynb  retrieval.py  setup.cfg  setup.py  test notebook.ipynb  timing_model.py
notebooks/: fitting-dev.ipynb
src/: TimingModel.py  retrieval.py
src/ttvpack/: TimingModel.py  __init__.py  fitting.py  retrieval.py
