[metadata]
name = ttvpack
version = 0.0.1b1
author = Michael Porritt
author_email = porrittmichael@gmail.com
description = Tools to analyse the dynamics of transiting exoplanets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mporritt/ttvpack
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
